# PyPico8

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  install_dev.bat  pylintrc  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: memory.txt  sauce.txt
src/: 256_followers.py  3d_helix.py  amorphous_form.py  archery.py  assembled_horizon.py  bike.py  bitplane_explorer.py  blink_frame.py  bogosort.py  book.py  chain_ripples.py  cistercian_numerals.py  code_golf.py  color_maze.py  crystalline_string.py  curvy_lines.py  dancing_rectangles.py  diamonds.py  disco_squid.py  distance_signs.py  dragon_candy.py  drippy.py  eyes.py  fake_sprite.py  fatal_error.py  fractus.py  galaxy.py  ghost_lights.py  globe.py  islehopper.py  jenga.py  jiggly_ovals.py  loading_bar.py  mandala.py  mandala2.py  merry_xmas.py  moving_checkers.py  moving_maze.py  music_generator.py  neon_jellyfish.py  (+23 more)
src/pypico8/: TODO.txt  __init__.py  audio.py  cov.bat  infix.py  math.py  maths.py  multiple_dispatch.py  spoonfeeder.py  strings.py  table.py  video.py
