[project]
name = "PyPico8"
license = { file = "LICENSE" }
readme = "README.md"
# version = "2"
dynamic = ["version"]
dependencies = ["emoji", "pygame"]

[project.optional-dependencies]
dev = ["black", "coverage", "mypy", "pre-commit", "pylint"]

[tool.mypy]
disable_error_code = ["arg-type", "attr-defined", "index", "name-defined"]
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "numba.*"
follow_imports = "skip"

[[tool.mypy.overrides]]
module = "infix.*"
warn_return_any = false

[[tool.mypy.overrides]]
module = ["untyped_package.*"]
follow_untyped_imports = true
